# WealthWizard

./: .replit  app.py  main.py  pyproject.toml  replit.nix
static/css/: style.css
static/js/: calculator.js
templates/: base.html  emi_calculator.html  index.html  pdf_template.html
