[project]
name = "repl-nix-wealthwizard"
version = "0.1.0"
description = "Professional financial calculator with comprehensive financial projections"
requires-python = ">=3.11"
dependencies = [
    "flask==2.3.3",
    "werkzeug==2.3.7",
    "jinja2==3.1.2",
    "pdfkit==1.0.0",
    "click==8.1.7",
    "itsdangerous==2.1.2",
    "MarkupSafe==2.1.3"
]
